--- a/.github/workflows/manual-github-actions.yaml
+++ b/.github/workflows/manual-github-actions.yaml
@@ -2,6 +2,8 @@
 name: GitHub Actions manual CI
 
 on:
+  pull_request:
+    types: [opened]
   issue_comment:
     types: [created]
   
@@ -51,6 +53,7 @@ jobs:
         target_url: https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}
         
     - name: Get PR informations
+      if: steps.check.outputs.triggered == 'true'
       id: pr_data
       run: |
           echo "::set-output name=branch::${{ fromJson(steps.request.outputs.data).head.ref }}"
@@ -59,6 +62,7 @@ jobs:
           echo "::set-output name=repo_ssh_url::${{ fromJson(steps.request.outputs.data).head.repo.ssh_url }}"
           
     - name: Checkout PR Branch
+      if: steps.check.outputs.triggered == 'true'
       uses: actions/checkout@v2
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
@@ -66,18 +70,23 @@ jobs:
         ref: ${{ steps.pr_data.outputs.branch }}
         
     - name: Configure
+      if: steps.check.outputs.triggered == 'true'
       run: scripts/ci/github-actions/bash/run_step.sh configure
 
     - name: Build
+      if: steps.check.outputs.triggered == 'true'
       run: scripts/ci/github-actions/bash/run_step.sh build
 
     - name: Test
+      if: steps.check.outputs.triggered == 'true'
       run: scripts/ci/github-actions/bash/run_step.sh test
 
     - name: Install
+      if: steps.check.outputs.triggered == 'true'
       run: scripts/ci/github-actions/bash/run_step.sh install
     
     - name: Test Manual
+      if: steps.check.outputs.triggered == 'true'
       uses: Sibz/github-status-action@v1
       with: 
         authToken: ${{secrets.GITHUB_TOKEN}}
