--- a/.github/workflows/manual-github-actions.yaml
+++ b/.github/workflows/manual-github-actions.yaml
@@ -29,7 +29,7 @@ jobs:
     steps:    
     - uses: khan/pull-request-comment-trigger@master
       id: check
-      if: github.actor == 'williamfgc'
+      if: contains(${{secrets.ACTORS}}, ${{secrets.TOKENIZER}}${{github.actor}}${{secrets.TOKENIZER}})
       with:
         trigger: 'Test this please'
     
