--- a/.github/workflows/manual-github-actions.yaml
+++ b/.github/workflows/manual-github-actions.yaml
@@ -29,7 +29,10 @@ jobs:
     steps:    
     - uses: khan/pull-request-comment-trigger@master
       id: check
-      if: contains('${{secrets.ACTORS}}', '${{secrets.TOKENIZER}}${{github.actor}}${{secrets.TOKENIZER}}')
+      env:
+        ALLOWED_ACTORS: ${{secrets.ACTORS}}
+        CURRENT_ACTOR: ${{secrets.TOKENIZER}}${{github.actor}}${{secrets.TOKENIZER}}
+      if: contains('${{env.ALLOWED_ACTORS}}', '${{env.CURRENT_ACTOR}}')
       with:
         trigger: 'Test this please'
     
